# SpeechGrap

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
notifier/linux_display/: Cargo.toml  install.sh
notifier/linux_display/deploy/: linux_display.example  linux_display.service
notifier/linux_display/src/: main.rs
src/: app.py  config.py  display_client.py  logs.py  model.py  recorder.py
