[project]
name = "speechgrab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keyboard>=0.13.5",
    "numpy>=2.3.3",
    "onnx-asr[cpu,hub]>=0.7.0",
    "pyperclip>=1.11.0",
    "qtpy>=2.4.3",
    "sounddevice>=0.5.2",
]
